<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nelitaaas.tugas2_prakmobpro.MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/rpm" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/viewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/viewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewUsername">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/viewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewPassword"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btLogin"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/login" />

        <Button
            android:id="@+id/btRegister"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/register" />

    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/loginTwitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="10dp"
        android:background="@color/twitter"
        android:drawableLeft="@drawable/ic_twitter"
        android:drawableStart="@drawable/ic_twitter"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/log_in_with_twitter"
        android:textAllCaps="false"
        android:textColor="@color/bg" />

    <Button
        android:id="@+id/loginGplus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTwitter"
        android:layout_marginTop="10dp"
        android:background="@color/gplus"
        android:drawableLeft="@drawable/ic_gplus"
        android:drawableStart="@drawable/ic_gplus"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/login_gplus"
        android:textAllCaps="false"
        android:textColor="@color/bg" />

</RelativeLayout>